# Zeus

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CONTRIBUTORS.md  README.md
.cache/clangd/index/: algorithm.hpp.3E649568581819C7.idx  algorithm.hpp.4F19B9356598A10B.idx  algorithm2.hpp.15677ACBE0F749D7.idx  assert.hpp.071754E506F1D3C3.idx  character.cpp.1BE2A18EEA6692D7.idx  character.hpp.51132E64BE7320D4.idx  character2.hpp.68F60A0A171B3663.idx  character_iterator.hpp.046D9D5ADFB7CDB5.idx  character_view.hpp.902B2E57F151B00F.idx  character_view_iterator.hpp.28A74254B94B87CB.idx  code_point.cpp.919169FD1B2AB57E.idx  code_point.hpp.A085C10BB178DCC6.idx  code_unit.hpp.DEEC607167C1E919.idx  compiler_macros.hpp.0D326F1862D689B0.idx  concepts.hpp.8AAD97F85359853A.idx  exception.hpp.1DC0E14FF5C578D7.idx  exception.hpp.E99F0F39E29110F2.idx  fixed_vector.hpp.878F8A98F8B68AD7.idx  iterator.hpp.B3D0E70492BA7E41.idx  iterator2.hpp.5B042499DA162EC2.idx  log.hpp.10BEEFFDE9950AD1.idx  macro_helpers.hpp.AB9536BCB4115F78.idx  main.cpp.AB0C3C1C85AA8AAA.idx  string.cpp.7707899C60F7D113.idx  string.hpp.72539F224CF35AF1.idx  types.hpp.DF9A9E03C74938BA.idx  unicode.hpp.AEABB97AADEBBFF7.idx  updateable_character.hpp.84BCDF1B974F4169.idx  updateable_character_iterator.hpp.6B8285D1A2F1BDE3.idx  utf8.hpp.4C23CD5ACADA97D6.idx  utility.hpp.67CFB441FD810BDD.idx  utility.hpp.87BC5E917664304D.idx  valid_character.hpp.ECBB1EB455E18880.idx
.vim/: coc-settings.json
build_scripts/: debug_build.ps1
engine/: CMakeLists.txt
engine/cmake/: AddZeusExample.cmake  AddZeusSources.cmake  AddZeusTest.cmake  PrepTargetForTest.cmake  config.hpp.in
engine/dev/: .clang-tidy
engine/docs/: CMakeLists.txt  Doxyfile.in
engine/examples/: CMakeLists.txt
engine/examples/math/: CMakeLists.txt
engine/examples/math/matrix/: CMakeLists.txt  matrix.cpp
engine/examples/math/vector/: CMakeLists.txt  vector.cpp
engine/examples/utf8/: example.cpp
engine/include/zeus/: config.hpp
engine/include/zeus/cli/: cli.hpp
engine/include/zeus/core/: assert.hpp  compiler_macros.hpp  log.hpp  macro_helpers.hpp  macros.hpp  types.hpp
engine/include/zeus/math/: matrix.hpp  type_traits.hpp  vector_2d.hpp  vector_3d.hpp
engine/include/zeus/memory/: endian.hpp  utility.hpp
engine/include/zeus/numeric/: utility.hpp
engine/include/zeus/string/: unicode.hpp  utf8.hpp
engine/include/zeus/string/unicode/: code_point.hpp  code_points.hpp  exception.hpp
engine/include/zeus/string/utf8/: algorithm.hpp  character.hpp  character_iterator.hpp  character_view.hpp  character_view_iterator.hpp  code_unit.hpp  error_code.hpp  exception.hpp  iterator.hpp  safe_iterator.hpp  string.hpp  string_view.hpp  unsafe_iterator.hpp  updateable_character.hpp  updateable_character_iterator.hpp  valid_character.hpp  wrapper_string.hpp
engine/include/zeus/utility/: algorithm.hpp  concepts.hpp  fixed_vector.hpp
engine/src/: CMakeLists.txt  main.cpp
engine/src/cli/: CMakeLists.txt  cli.cpp
engine/src/string/: CMakeLists.txt
engine/src/string/unicode/: CMakeLists.txt  code_point.cpp
engine/src/string/utf8/: CMakeLists.txt  character.cpp  string.cpp
engine/tests/: CMakeLists.txt
engine/tests/integration/: CMakeLists.txt
engine/tests/unit/: CMakeLists.txt
engine/tests/unit/math/: CMakeLists.txt
engine/tests/unit/math/matrix/: CMakeLists.txt  matrix_test.cpp
engine/tests/unit/math/vector/: CMakeLists.txt  vector_test.cpp
engine/tests/unit/memory/: CMakeLists.txt
engine/tests/unit/memory/endian/: CMakeLists.txt  endian_test.cpp
engine/tests/unit/string/: CMakeLists.txt
engine/tests/unit/string/unicode/: CMakeLists.txt  code_point_test.cpp  code_points_test.cpp
engine/tests/unit/string/utf8/: CMakeLists.txt  code_unit_test.cpp
